# ISMRM2019_demo

./: .gitattributes  README.md  setup.sh  setup_gadgetron_local.sh  setup_ge_demo.sh
AI_in_Gadgetron/: Grappa.ai.ipynb
AI_in_Gadgetron/data/meas_MID00349_FID09273_SNR_R3/: Grappa_test_data.mat
First_Gadget/: Chain.xml  Makefile  Recon.cpp  example.h5
GE_converter_demo/: README.md
GE_converter_demo/gadgetronExtras/: CMakeLists.txt
GE_converter_demo/gadgetronExtras/fieldMapGadgetGE/: CMakeLists.txt  fieldMapCompute.py  fieldMapDICOM.xml  fieldMapFloat.xml
GE_converter_demo/ge_to_ismrmrd_converter/: CMakeLists.txt  LICENSE  README.md
GE_converter_demo/ge_to_ismrmrd_converter/cmake/: FindIsmrmrd.cmake  FindOrchestra.cmake
GE_converter_demo/ge_to_ismrmrd_converter/gtConfigs/: gtReconExampleGE2D.xml  gtReconExampleGEEPI.xml
GE_converter_demo/ge_to_ismrmrd_converter/src/: CMakeLists.txt  Doxyfile.in  GERawConverter.cpp  GERawConverter.h  GenericConverter.cpp  GenericConverter.h  Plugin.cpp  Plugin.h  SequenceConverter.h  XMLWriter.h  ge_tools_path.h  main.cpp
GE_converter_demo/ge_to_ismrmrd_converter/src/NIHPlugins/: 2dfastConverter.cpp  2dfastConverter.h  2dfastNoiseConverter.cpp  2dfastNoiseConverter.h  CMakeLists.txt  epiConverter.cpp  epiConverter.h
GE_converter_demo/ge_to_ismrmrd_converter/src/config/: default.xml  default.xsl  epiRT.xsl
GE_converter_demo/ge_to_ismrmrd_converter/src/schema/: geismrmrd.xsd
GE_converter_demo/ismrmrd/: CMakeLists.txt
GE_converter_demo/sampleData/2dB0Map/: .ismrm_converter_cmds.txt  .ismrm_gadgetron_cmds.txt
GE_converter_demo/sampleData/2dBasic/: .ismrm_converter_cmds.txt  .ismrm_gadgetron_cmds.txt  P20480_GRE.7  ScanArchive_GRE.h5
GE_converter_demo/sampleData/epi/: .ismrm_converter_cmds.txt  .ismrm_gadgetron_cmds.txt
Gadgetron_Bart_T1_demo/: ISMRM2019_T1map_slide.pptx
Siemens_Scanner_Setup/: README.md
Slides/: ISMRM2019_short_intro.pptx  ISMRM2019_software_demo_Gadgetron.pptx
